commented out most labels

--- a/hazelnut-popl17.tex
+++ b/hazelnut-popl17.tex
@@ -1,6 +1,6 @@
 \def\OPTIONConf{1}%
-\newif\iftr\trfalse
-%\newif\iftr\trtrue
+%\newif\iftr\trfalse
+\newif\iftr\trtrue
 %\documentclass[12pt]{article}
 \RequirePackage{etex}
 \documentclass[preprint,9pt]{sigplanconf}
