moved common appendix text into appendix.tex

--- a/appendix.tex
+++ b/appendix.tex
@@ -1179,7 +1179,7 @@ The synthetic and analytic expression action performance judgements are defined 
 \subsubsection{Iterated Action Judgements} ~
 
 \noindent $\mathsf{ActionList}$~~$\bar{\alpha} ::= \cdot ~\vert~ \alpha; \bar{\alpha}$\vspace{4px}\\
-\fbox{$\performTyp{\ztau}{\bar{\alpha}}{\ztau'}$}
+\fbox{$\performTypI{\ztau}{\bar{\alpha}}{\ztau'}$}
 \begin{subequations}
 \begin{equation}
 \inferrule{ }{
