--- a/hazelnut-popl17.tex
+++ b/hazelnut-popl17.tex
@@ -389,7 +389,7 @@ systems, for we will not forever stay confined to mere strings of symbols.}
 \clearpage
 %\onecolumn
 \appendix
-\input{hazelnut-rules}
+\input{appendix}
 \else
 % No Appendix Here
 \fi
