its / its correction

--- a/hazelnut-popl17.tex
+++ b/hazelnut-popl17.tex
@@ -146,11 +146,11 @@ basicstyle=\ttfamily\fontsize{8pt}{1em}\selectfont}
 
 %  \emph{Structure editors} have long promised to alleviate these burdens by exposing only edit actions that  cause sensible changes to the program structure.
 % Existing designs for structure editors, however, are complex and somewhat \emph{ad hoc}. They also focus primarily on syntactic well-formedness, so programs can still be left semantically meaningless as they are being constructed.
-% Structure editors (e.g. Scratch) eliminate the possibility of syntax errors. 
+% Structure editors (e.g. Scratch) eliminate the possibility of syntax errors.
 
 \emph{Structure editors} allow programmers to edit the tree structure of a program directly. This can have cognitive benefits, particularly for novice and end-user programmers (as evidenced by the popularity of structure editors like Scratch.) It also simplifies matters for tool designers, because they do not need to contend with malformed program text.
 
-This paper defines Hazelnut, a {structure editor} based on a small bidirectionally typed lambda calculus extended with \emph{holes} and a \emph{cursor} (\emph{ala} Huet's zipper.) Hazelnut goes one step beyond syntactic well-formedness: it's {edit actions} operate over statically meaningful (i.e. well-typed) terms.  
+This paper defines Hazelnut, a {structure editor} based on a small bidirectionally typed lambda calculus extended with \emph{holes} and a \emph{cursor} (\emph{ala} Huet's zipper.) Hazelnut goes one step beyond syntactic well-formedness: its {edit actions} operate over statically meaningful (i.e. well-typed) terms.
 Na\"ively, this prohibition on ill-typed edit states would force the programmer to construct terms in a rigid ``outside-in'' manner. To avoid this problem, the {action semantics} automatically places terms assigned a type that is inconsistent with the expected type {inside} a {hole}. This safely defers the type consistency check until the term inside the hole is \emph{finished}.
 
 Hazelnut is a foundational type-theoretic account of typed structure editing, rather than an end-user tool itself. To that end, we describe how Hazelnut's rich metatheory, which we have mechanized in Agda, guides the definition of an extension to the calculus. We also discuss various plausible evaluation strategies for terms with holes, and in so doing reveal connections with gradual typing and contextual modal type theory (the Curry-Howard interpretation of contextual modal logic.) Finally, we  discuss how Hazelnut's semantics lends itself to implementation as a functional reactive program. Our reference implementation is written using \lstinline{js_of_ocaml}.
@@ -209,19 +209,19 @@ Hazelnut is a foundational type-theoretic account of typed structure editing, ra
 \section{Related Work and Discussion}\label{sec:rw}
 %\subsection{Structure Editors}
 \subsection{Structure Editors}
-Syntactic structure editors have a long history -- the Cornell Program Synthesizer~\cite{teitelbaum_cornell_1981} was first introduced in 1981. Novice programmers have been a common target for structure editors. For example, 
-GNOME~\cite{garlan_gnome:_1984} was developed to teach programming to undergraduates. 
+Syntactic structure editors have a long history -- the Cornell Program Synthesizer~\cite{teitelbaum_cornell_1981} was first introduced in 1981. Novice programmers have been a common target for structure editors. For example,
+GNOME~\cite{garlan_gnome:_1984} was developed to teach programming to undergraduates.
 Alice~\cite{Conway:2000:ALL:332040.332481} is a 3-D programming language with an integrated structure editor for teaching novice CS undergraduate students. Scratch~\cite{Resnick:2009:SP:1592761.1592779} is a structure editor targeted at children ages 8 to 16.  TouchDevelop \cite{tillmann_touchdevelop:_2011} incorporates a structure editor for programming on touch-based devices, and is used to teach high school students. An implementation of Hazelnut might be useful in teaching students about the typed lambda calculus, though that has not been our explicit aim with this work.
 
 Not all structure editors are for educational purposes. For example,
-mbeddr \cite{voelter_mbeddr:_2012} is a structure editor for a C-based programming language (nominally, for programming embedded systems.)  
-Lamdu~\cite{lamdu}, like Hazelnut, is a structure editor for a statically typed functional language. It is designed for use by professional programmers. 
+mbeddr \cite{voelter_mbeddr:_2012} is a structure editor for a C-based programming language (nominally, for programming embedded systems.)
+Lamdu~\cite{lamdu}, like Hazelnut, is a structure editor for a statically typed functional language. It is designed for use by professional programmers.
 
 The examples given so far either define a language with a trivial static semantics, or do not attempt to maintain well-typedness as an edit invariant. This can pose problems, for reasons discussed in the Introduction. One apparent exception is Unison~\cite{unison}, a structure editor for a typed functional language similar to Haskell. Like Hazelnut, it seems to define some notion of well-typedness for expressions with holes (though there is no technical documentation on virtually any aspect of its design.) Unlike Hazelnut, it does not have a notion analagous to Hazelnut's notion of a non-empty hole. As such, programmers must construct programs in a rigid outside-in manner, as discussed in Sec. \ref{sec:example}. Another system with the same problem is Polymorphic Blocks, a block-based user interface where the structure of block connectors encodes a type \cite{DBLP:conf/chi/LernerFG15}.
 
 We fundamentally differ from these projects in our design philosophy: we consider it essential to start by building type theoretic foundations, which are independent of nearly all decisions about the user interface. In contrast, these editors have developed innovative user interfaces (e.g. see the discussion in \cite{DBLP:conf/sle/VolterSBK14}) but lack a principled foundational calculus. In this respect, we follow the philosophical approach taken by languages that are rooted in the type theoretic tradition and have gone to great effort to develop a clear metatheory, like Standard ML \cite{mthm97-for-dart,Harper00atype-theoretic}.  In the future, we hope that these lines of research will merge to produce a human-usable typed structure editor with sound formal foundations. Our contribution, then, is in defining and analyzing the theoretical properties of a small foundational calculus that could be extended to achieve this vision.
 
-Some structure editor generators do operate on formal or semi-formal definitions of an underlying language. For example, the Synthesizer Generator~\cite{Reps:1984:SG:390010.808247} allows the user to define an attribute grammar-based language implementation that then can be used to generate a structured editor. CENTAUR~\cite{Borras:1988:CS:64140.65005} produces a language specific environment from a user defined formal specification of a language. Barista is a programmatic toolkit for building structure editors \cite{ko_barista:_2006}. mbeddr is built on top of the commercial JetBrains MPS framework for constructing structure editors \cite{voelter2011language,DBLP:journals/software/VoelterWK15}. These systems do not give a semantics to the edit states of the structure editor itself, or maintain non-trivial edit invariants, as Hazelnut does. 
+Some structure editor generators do operate on formal or semi-formal definitions of an underlying language. For example, the Synthesizer Generator~\cite{Reps:1984:SG:390010.808247} allows the user to define an attribute grammar-based language implementation that then can be used to generate a structured editor. CENTAUR~\cite{Borras:1988:CS:64140.65005} produces a language specific environment from a user defined formal specification of a language. Barista is a programmatic toolkit for building structure editors \cite{ko_barista:_2006}. mbeddr is built on top of the commercial JetBrains MPS framework for constructing structure editors \cite{voelter2011language,DBLP:journals/software/VoelterWK15}. These systems do not give a semantics to the edit states of the structure editor itself, or maintain non-trivial edit invariants, as Hazelnut does.
 %These early systems were developed  of the systems are rooted in the type-theoretic tradition.
 
 Related to structure editors are value editors, which operate directly on simple values (but not generally expressions or functions) of a programming language. For example, Eros is a typed value editor based in Haskell \cite{DBLP:conf/icfp/Elliott07}.
@@ -252,7 +252,7 @@ Expression holes can also be understood by invoking the notion of a \emph{metava
 
 Making the modal context explicit in our semantics is not technically useful given our stated purpose -- interactive program editing is not merely hole filling in Hazelnut (i.e. the cursor need not be on a hole). Moreover, the hole's type and context become apparent as our action semantics traverses the zipper structure on each step. Some interactive proof assistants, however, support a tactic model based directly on hole filling, so the connection to CMTT and similar systems is more useful. For example,  Beluga \cite{DBLP:conf/flops/Pientka10} is based on dependent CMTT and aspects of Idris' editor support \cite{brady2013idris} are based on McBride's OLEG \cite{mcbride2000dependently} and Lee and Friedman have explored a lambda calculus with contexts for a similar purpose \cite{DBLP:conf/icfp/LeeF96}.
 
-One interesting avenue of future work is to elaborate expression holes to CMTT's closures, i.e. CMTT terms of the form $\mathsf{clo}(u; \text{id}(\Gamma))$ where $u$ is a unique metavariable associated with each hole and $\text{id}(\Gamma)$ is the explicit identity substitution. This would allow us to evaluate expressions with holes such that the closure ``accumulates'' substitutions explicitly. When evaluation gets ``stuck'' (as it can, for CMTT does not define a dynamics equipped with a notion of progress under a non-empty modal context), it would then be possible for the programmer to choose holes from amongst the visible holes (which may have been duplicated) to edit in their original context. Once finished, the CMTT hole instantiation operation, together with a metatheorem that establishes that reduction commutes with instantiation, would enable an ``edit and resume'' feature with a clear formal basis. This notion of reduction commuting with instantiation has also been studied in other calculi \cite{DBLP:journals/entcs/Sands97}. Being able to edit a running program also has connections to less formal work on ``live programming'' interfaces \cite{burckhardt2013s,lamdu}. %, e.g. 
+One interesting avenue of future work is to elaborate expression holes to CMTT's closures, i.e. CMTT terms of the form $\mathsf{clo}(u; \text{id}(\Gamma))$ where $u$ is a unique metavariable associated with each hole and $\text{id}(\Gamma)$ is the explicit identity substitution. This would allow us to evaluate expressions with holes such that the closure ``accumulates'' substitutions explicitly. When evaluation gets ``stuck'' (as it can, for CMTT does not define a dynamics equipped with a notion of progress under a non-empty modal context), it would then be possible for the programmer to choose holes from amongst the visible holes (which may have been duplicated) to edit in their original context. Once finished, the CMTT hole instantiation operation, together with a metatheorem that establishes that reduction commutes with instantiation, would enable an ``edit and resume'' feature with a clear formal basis. This notion of reduction commuting with instantiation has also been studied in other calculi \cite{DBLP:journals/entcs/Sands97}. Being able to edit a running program also has connections to less formal work on ``live programming'' interfaces \cite{burckhardt2013s,lamdu}. %, e.g.
 
 \subsection{Evaluation Strategies: A High-Dimensional Space}
 To summarize, we have discussed three different evaluation strategies in the presence of type holes:
@@ -323,9 +323,9 @@ This paper presented Hazelnut, a type theoretic structure editor calculus. Our a
 
 In addition to simplifying the job of an editor designer, typed structure editors also promise to increase the speed of development by eliminating redundant syntax and supporting higher-level primitive actions. However, we did not discuss such ``edit costs'' here, because they depend on particular implementation details, e.g. whether a keyboard or a mouse is in use. Indeed, we consider it a virtue of this work that such implementation details do not enter into our design.
 
-% By keeping the program in both a structurally and semantically well-defined state at all times, Hazelnut allows users to avoid premature commitment~\cite{green1996usability}.  
-% By inserting a hole, the user can leave certain parts of the program unfinished, \todo{What is the best word to define this concept?  In progress, unfinished, incomple?} and yet still in a well defined type state. 
-% This also enables progressive evaluation~\cite{green1996usability}, because unfinished solutions are also are well-defined at all times, thus enabling tools to provide evaluation of unfinished solutions.\todo{integrate this} 
+% By keeping the program in both a structurally and semantically well-defined state at all times, Hazelnut allows users to avoid premature commitment~\cite{green1996usability}.
+% By inserting a hole, the user can leave certain parts of the program unfinished, \todo{What is the best word to define this concept?  In progress, unfinished, incomple?} and yet still in a well defined type state.
+% This also enables progressive evaluation~\cite{green1996usability}, because unfinished solutions are also are well-defined at all times, thus enabling tools to provide evaluation of unfinished solutions.\todo{integrate this}
 
 \subsection{Future Work}
 \subsubsection{Richer Languages}
@@ -337,7 +337,7 @@ It is interesting to note that the demarcation between the language and the edit
 There are various aspects of the editor model that we have not yet formalized. For example, our action model does not consider how actions are actually entered using, for example, key combinations or chords. In practice, we would want also to rank available actions in some reasonable manner (perhaps based on usage data gathered from other users or code repositories.) Designing a rigorous typed probability model over actions and H-expressions is one avenue of research that we have started to explore, with intriguing initial results.
 
 \subsubsection{Programmable Actions}
-Our language of actions is intentionally primitive. However, even now it acts much like a simple imperative command language. This suggests future expansion to, for example, a true tactic language. Alternatively, it may be more useful to develop the notion of an \emph{action macro}, whereby functional programs could themselves be lifted to the level of actions to compute non-trivial compound actions. 
+Our language of actions is intentionally primitive. However, even now it acts much like a simple imperative command language. This suggests future expansion to, for example, a true tactic language. Alternatively, it may be more useful to develop the notion of an \emph{action macro}, whereby functional programs could themselves be lifted to the level of actions to compute non-trivial compound actions.
 
 \subsubsection{Views}
 Another research direction is in exploring how types can be used to control the presentation of expressions in the editor. For example, following an approach developed in a textual setting of developing \emph{type-specific languages} (TSLs), it should be possible to have the type that an expression is being analyzed against define alternative display forms and interaction modes \cite{TSLs}.
@@ -351,9 +351,9 @@ Finally, we did not consider any aspects of \emph{collaborative programming}, su
 Although we make few empirical claims in this paper, it is ultimately an empirical question as to whether structure editors, and typed structure editors, are practical. We hope to conduct user studies once a richer semantics has been developed.
 
 \subsubsection{More Theory}
-Connections with gradual type systems and CMTT, discussed in the previous section, seem likely to continue to be revealing. 
+Connections with gradual type systems and CMTT, discussed in the previous section, seem likely to continue to be revealing.
 
-The notion of having one of many possible locations within a term under a cursor has a very strong intuitive connection to the proof theoretic notion of focusing \cite{Simmons11tr}. Building closer connections with proof theory (and category theory) is likely to be a fruitful avenue of further inquiry. 
+The notion of having one of many possible locations within a term under a cursor has a very strong intuitive connection to the proof theoretic notion of focusing \cite{Simmons11tr}. Building closer connections with proof theory (and category theory) is likely to be a fruitful avenue of further inquiry.
 
 
 
