parens for type consistency
adding parenthesis for the inductive rule in the typesetting of the ~
judgement (both in the appendix and the main text). this resolves
possible operator precedence questions before they arise (this came up
a couple times in feedback i got for a practice talk)

--- a/appendix.tex
+++ b/appendix.tex
@@ -36,7 +36,7 @@ The full collection of rules defining the semantics of Hazelnut are reproduced h
   \tcompat{\htau_1}{\htau_1'}\\
   \tcompat{\htau_2}{\htau_2'}
 }{
-  \tcompat{\tarr{\htau_1}{\htau_2}}{\tarr{\htau_1'}{\htau_2'}}
+  \tcompat{(\tarr{\htau_1}{\htau_2})}{(\tarr{\htau_1'}{\htau_2'})}
 }
 \end{equation}
 \end{subequations}
