--- a/formally.tex
+++ b/formally.tex
@@ -79,7 +79,7 @@ $\arraycolsep=4pt\begin{array}{lllllll}
   \tcompat{\htau_1}{\htau_1'}\\
   \tcompat{\htau_2}{\htau_2'}
 }{
-  \tcompat{\tarr{\htau_1}{\htau_2}}{\tarr{\htau_1'}{\htau_2'}}
+  \tcompat{(\tarr{\htau_1}{\htau_2})}{(\tarr{\htau_1'}{\htau_2'})}
 }~~~~~~~~\text{(\ref*{eqns:consistency}a-d)}
 % \end{equation}
 % \end{minipage}
